# cbzViewer

./: .gitignore  CREDITS  CREDITS.1  CREDITS.2  CREDITS.3  CREDITS.hbs  Caddyfile  Cargo.toml  Dockerfile  LEGAL.md  README.md  _config.docker.php  _config.php  _shared.php  about.toml  composer.json  config.docker.json  config.go  docker-compose.dev.yaml  go.mod  go.sum  img.go  img.php  index.php  lepton_handler.go  list.go  list.php  pathutils.go  read.go  read.php  server.go  thumb.go
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  e2e.yml  rust.yml  sentry-release-sh.yml  sentry-release.yml
api/: credits.php  img.php  list.php  read.php  thumb.php  thumb_dir.php
books/tests/: Testing Introduction 01.cbz
comic_info/: comic_info_scheme.go
frontend/: README.md  cypress.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/cypress/e2e/: list.cy.ts  read.cy.ts
frontend/public/: legal.txt
frontend/public/assets/: legal.txt
frontend/src/: App.vue  main.ts
frontend/src/router/: List.vue  Read.vue  index.ts
frontend/src/style/: list.css  read.css
frontend/src/utils/: queued-image-fetch.ts
internals/: _init.php
internals/comic_format/: CbzFile.php  ComicFormat.php
pdf-server/: Dockerfile  README.md  api-types.ts  functions.ts  index.ts  instrument.ts  package.json
src/: config.rs  img.rs  list.rs  main.rs  pathutils.rs  read.rs  thumb.rs
templates/: legal.html  legal.txt  list.html  read.html
templates/assets/: list.css  read.css  read.js  shared.js
