[package]
name = "cbz-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cbzViewer"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "unicode", "compat"] }
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
fast_image_resize = "4"
quick-xml = { version = "0.37", features = ["serialize"] }
natord = "1"
httpdate = "1"
urlencoding = "2"
sentry = { version = "0.47.0", default-features = false, features = ["actix", "tracing", "contexts", "panic", "reqwest", "rustls", "logs"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
log = "0.4.29"

[dev-dependencies]
tempfile = "3"