[package]
name = "cbz-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cbzViewer"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "unicode", "compat"] }
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.4.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "rayon"] }
fast_image_resize = { version = "6", features = ["image", "rayon"] }
quick-xml = { version = "0.39", features = ["serialize"] }
natord = "1"
httpdate = "1"
urlencoding = "2"
sentry = { version = "0.47.0", default-features = false, features = ["actix", "tracing", "contexts", "panic", "reqwest", "native-tls", "logs"] }
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"